--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Check code style
         run: npm run format:check
 
-      - name: Linting code
-        run: npm run lint
+      - name: Check linting
+        run: npm run lint -- --max-warnings=0
