--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,3 +21,14 @@ jobs:
 
           - name: Build project
             run: npm run build
+
+          - id: 'auth'
+            uses: 'google-github-actions/auth@v2'
+            with:
+              credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+          - name: 'Set up Cloud SDK'
+            uses: 'google-github-actions/setup-gcloud@v3'
+            
+          - name: 'Deploy to App Engine'
+            run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-471419/notely-ar-repo/notely:latest .
